1.6.1
=====

(Paulo Jobim)
- [DS-471] Accessing site-level 'mets.xml' in XMLUI doesn't work properly for handle prefixes with periods (e.g. 2010.1)

(Yin Yin Latt)
- [DS-565] Empty description column in Itemview Page - General-Handler.xsl
- [DS-566] Side bar menu dropping when there is license text in collection - DIM-Handler.xsl

(Robin Taylor)
- [DS-497] Date month and day get default values when user returns to describe form

(Keiji Suzuki)
- [DS-537] Malformed Japanese option values in the authority lookup window

(Peter Dietz)
- [DS-509] SOLR returns ArrayIndexOutOfBounds with non-existent country code OR when there is no view/download data
- [DS-542] verbose output for stats-log-importer displays spurious city/country from previous committed entry

(Kim Shepherd)
- [DS-547] Value for Recent Submissions is not workin in the XMLUI
- [DS-527] Withdrawn items not shown as deleted in OAI
- [DS-548] Removing repeatable values in DescribeStep does not properly test for authority control

(Claudia Jurgen)
- [DS-558] Error in update sequence script 1.5 to 1.6 Oracle
- [DS-551] Export directories dspace.cfg and build.xml out of sync
- [DS-543] Harvest not internationalized 

(Andrea Bollini)
 - [DS-513] Connection leak in SWORD authentication process 
 - [DS-581] DIDL doesn't respect the hidden fields and the oai_dc metadata section is different than the simple oai_dc implementation
 - [DS-580] DIDL format include HTML element if the item has no files
 - [DS-574] DSpaceMETSIngester creates empty original bundle
 - [DS-573] NPE resuming submission for item with an empty bundle original
 
(Caryn Neiswender)
 - [DS-518] Duplicate listing of dependencies in dspace-sword/pom.xml

(Keith Gilbertson)
 - [DS-123] xmlui browse in empty collection displays "Now showing items 1-0" of 0 - incorrect numbering
 - [DS-508] Attachment spelled as attachement in DailyReportEmailer
 - [DS-539] Misspelled attribute in MODS/METS output

(Stuart Lewis)