@@ -1,6 +1,9 @@
 1.6.1
 =====
 
+(Dale Poulter)
+- [DS-557] LC Authority Names - Lookup Feature - names w/o dates
+
 (Paulo Jobim)
 - [DS-471] Accessing site-level 'mets.xml' in XMLUI doesn't work properly for handle prefixes with periods (e.g. 2010.1)
 
